Use OpenJDK 11 + JavaFX 11 + Clojure 1.10.0
There is a lot remains to do, this commit contains only an initial stub
on migration.

Changes include:
- formatting to support parinfer in places where I touched code
- using correct syntax that clojure.spec rightfully complains about
- replacing internal calls to removed methods with similar calls
- adding type-hints to places that started to report reflective access